@@ -2920,34 +2920,32 @@ namespace Chummer.Backend.Equipment
                 return decReturn;
             }
         }
+        
+        public decimal StolenTotalCost => CalculatedStolenTotalCost(true);
 
-        /// <summary>
-        /// Total cost of the Weapon Accessory.
-        /// </summary>
-        public decimal StolenTotalCost
+        public decimal NonStolenTotalCost => CalculatedStolenTotalCost(false);
+
+        public decimal CalculatedStolenTotalCost(bool blnStolen)
         {
-            get
+            decimal decReturn = 0;
+            if (Stolen == blnStolen)
+                decReturn = OwnCostPreMultipliers;
+
+            decimal decPlugin = 0;
+            if (Children.Count > 0)
             {
-                decimal decReturn = 0;
-                if (Stolen)
-                    decReturn = OwnCostPreMultipliers;
-
-                decimal decPlugin = 0;
-                if (Children.Count > 0)
-                {
-                    // Add in the cost of all child components.
-                    decPlugin += Children.Sum(x => x.StolenTotalCost);
-                }
-
-                // The number is divided at the end for ammo purposes. This is done since the cost is per "costfor" but is being multiplied by the actual number of rounds.
-                int intParentMultiplier = (Parent as IHasChildrenAndCost<Gear>)?.ChildCostMultiplier ?? 1;
-
-                decReturn = (decReturn * Quantity * intParentMultiplier) / CostFor;
-                // Add in the cost of the plugins separate since their value is not based on the Cost For number (it is always cost x qty).
-                decReturn += decPlugin * Quantity;
-
-                return decReturn;
+                // Add in the cost of all child components.
+                decPlugin += Children.Sum(x => x.CalculatedStolenTotalCost(blnStolen));
             }
+
+            // The number is divided at the end for ammo purposes. This is done since the cost is per "costfor" but is being multiplied by the actual number of rounds.
+            int intParentMultiplier = (Parent as IHasChildrenAndCost<Gear>)?.ChildCostMultiplier ?? 1;
+
+            decReturn = (decReturn * Quantity * intParentMultiplier) / CostFor;
+            // Add in the cost of the plugins separate since their value is not based on the Cost For number (it is always cost x qty).
+            decReturn += decPlugin * Quantity;
+
+            return decReturn;
         }
 
         /// <summary>
